@@ -9,6 +9,7 @@ Thanks!
 2.1.0.2104
 ----------
 - Update to Sparkle 1.1.
+- Fix bug: preserved article is marked unread after folder reloaded.
 
 2.1.0.2103
 ----------
